<resources>
    <string name="app_name">QuizApp</string>
    <string name="QuizApp">QuizAPP!</string>
    <string name="quiz">Quiz</string>
    <string name="sign_in">Sign IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="java">Java</string>
    <string name="usernme">Usernme</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
</resources>