<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".JavaQuiz">

    <TextView
        android:id="@+id/idTVQuestionAttempted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:text="@string/number_of_questions"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idTVQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTVQuestionAttempted"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/idTVQuestionAttempted" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTVQuestion"
        android:layout_marginTop="164dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/idTVQuestionAttempted">

        <Button
            android:id="@+id/idBtnOption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/purple_200"
            android:padding="4dp"
            android:text="@string/option_1"
            android:textAllCaps="false"
            android:textColor="#311B92" />

        <Button
            android:id="@+id/idBtnOption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/purple_200"
            android:padding="4dp"
            android:text="@string/option_2"
            android:textAllCaps="false"
            android:textColor="#311B92" />

        <Button
            android:id="@+id/idBtnOption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/purple_200"
            android:padding="4dp"
            android:text="@string/option_3"
            android:textAllCaps="false"
            android:textColor="#311B92" />

        <Button
            android:id="@+id/idBtnOption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/purple_200"
            android:padding="4dp"
            android:text="@string/option_4"
            android:textAllCaps="false"
            android:textColor="#311B92" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>