<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DashboardActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background_view" />

    <TextView
        android:id="@+id/dashUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="5dp"
        android:padding="10dp"
        android:text="@string/usernme"
        android:gravity="center|center_vertical|center_horizontal"
        android:textColor="#546E7A"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_baseline_person_outline_24" />

    <TextView
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/dashboard"
        android:textColor="#546E7A"
        android:textSize="25sp"
        app:drawableStartCompat="@drawable/ic_baseline_dashboard_24" />

    <GridLayout
        android:id="@+id/dashboardGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp"
        android:columnCount="2"
        android:rowCount="3">

        <androidx.cardview.widget.CardView

            android:id="@+id/javaCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:padding="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:src="@drawable/java" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/java"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </GridLayout>

</RelativeLayout>